# watchyourclankers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
ci/: cm_smoke.mjs  fast.sh  full.sh  interaction.mjs  render_smoke.mjs
contracts/: events.schema.json
docs/: HANDOFF.md  LESSONS.md  MASTER_PLAN.md  MODULE_BUILD_CHECKLIST.md  REMEDIATION.md  UX_LOG.md
ecc/: VENDORED.md
hooks/: post-tool-use.py
specs/001-infra-contract-feed/: spec.md
specs/002-ide-pane/: plan.md  spec.md  tasks.md
tests/: test_dual_home.py  test_e2e.py  test_feed.py  test_handoff_fresh.py  test_interaction_guard.py  test_packaging.py  test_serverhook.py  test_tmux.py  test_tmux_integration.py
tools/: check_constitution_gates.py  check_contract.py  check_coverage.py  check_frontend.py  check_handoff_fresh.py  check_interaction_tests.py  check_ledger.py  interaction_guard.py  stamp_handoff.py
web/: app-config.js  app.js  assign.js  assign.test.mjs  client.js  cmreveal.js  cmreveal.test.mjs  cmtheme.js  cmtheme.test.mjs  debug.js  ide.css  ide.js  idegeom.js  idegeom.test.mjs  index.html  menu.js  mosaic.css  mosaic.js  package.json  readscan.js  readscan.test.mjs  resize.js  reveal.js  reveal.test.mjs  revealpolicy.js  revealpolicy.test.mjs  store.js  store.test.mjs  styles.css  termpolicy.js  termpolicy.test.mjs
wyc/: __init__.py  __main__.py  contract.py  handoff.py  redact.py  server.py  sessions.py  threads.py  tmux.py  transcripts.py  watcher.py
(+4 files in other folders)
